# 00-Raiser

./: .dockerignore  .gitignore  AWS Setup.md  Dockerfile  README.md  Setup.md  Windows Setup.md  fly.toml  pyproject.toml  requirements.txt
00_raiser/app/: settings.py
00_raiser/app/cogs/: corekeeper.py
AWS/: start_server.sh
AWS/lambda/: ArchiveSnapshot.py  Generate_AMI_From_Snapshot.py  GetServerStatus.py  RestoreArchivedSnapshot.py  SnapAndDelete.py  SnapshotToAMI.py
Discord/: bot.py  response.py  settings.py
Discord/handlers/: core.py  vrising.py
app/: __main__.py  settings.py
app/cogs/: corekeeper.py  minecraft.py  palworld.py  vrising.py
app/handlers/: aws.py  input_parser.py  output.py  output_formatter.py  server.py
discord/: requirements.txt
discord/app/: bot.py  games.py  logging.conf  settings.py  status.py
discord/app/cogs/: corekeeper.py  minecraft.py  slash_cog.py  vrising.py
discord/app/handlers/: aws.py  core.py  output.py  server.py
discord/test/: aws_test.py  bot_test.py  server_test.py  test_settings.py
docs/: AWS Setup.md  Core Keeper Setup.md  Minecraft Setup.md  Ubuntu Setup.md  V Rising Setup.md  Windows Setup.md
flask/: core.py  setup.sh  start_flask.sh
flask/api/: api.http
flask/cert/: cert.pem  key.pem
flask/scripts/: start_v_rising.sh
test/: aws_test.py  server_test.py
