[tool.poetry]
name = "app"
version = "0.1.0"
description = "A bot for managing game servers."
authors = ["devtk0 <tko.developer.02@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.41"
py-cord = "^2.3.2"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app.__main__:main"